# C-game

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: blit.frag  blit.vert  control.frag  control.vert  debug.frag  debug.vert  default.frag  default.vert  shell.frag  shell.vert  sky.frag  sky.vert  terrain.frag  terrain.vert
src/: main.c
src/engine/: camera.c  camera.h  game_object.c  game_object.h  global.h  impl_util.c  input.h  math_util.c  math_util.h  types.h  window.c  window.h
src/engine/components/: skybox.c  skybox_component.c  skybox_component.h  transform.c  transform.h  transform_component.c  transform_component.h
src/engine/data/: array.c  array.h  map.c  map.h
src/engine/game_logic/: game_info.c  game_info.h  game_loader.c  game_loader.h  objective.c  objective.h  player.c  player.h
src/engine/input/: input.c  input.h
src/engine/io/: io.c  io.h
src/engine/math/: cube.c  cube.h  rectangle.c  rectangle.h  rng.c  rng.h  vector.c  vector.h
src/engine/math/procgen/: bsp.c  bsp.h
src/engine/rendering/: camera.c  camera.h  ebo.c  ebo.h  fbo.c  fbo.h  font.c  font.h  mesh.c  mesh.h  rbo.c  rbo.h  render.c  render.h  render_init.c  render_internal.h  render_util.c  renderer.c  renderer.h  shader.c  shader.h  sprite_batch.c  sprite_batch.h  texture.c  texture.h  vao.c  vao.h  vbo.c  vbo.h  vertex.c  vertex.h
